# AttendEase

./: README.md  ps.md
backend/: .gitignore  Cargo.toml
backend/src/: db.rs  error.rs  main.rs  state.rs
backend/src/models/: attendance_model.rs  class_model.rs  student_model.rs  teacher_model.rs
backend/src/routes/: attendance_route.rs  class_route.rs  student_route.rs  teacher_route.rs
frontend/: .eslintrc.json  .prettierrc  package-lock.json  package.json
